--- a/.gitignore
+++ b/.gitignore
@@ -3,8 +3,12 @@
 
 blog-gruntwork-io.iml
 
+ .terraform
+*.tfstate
+*.tfstate.backup
 
 **/.terraform
 **/.terraform.lock.hcl
 
-**/terraform.tfstate
+**/.tfstate
+**/.tfstate.backup
